Sigil 0.6.0 TBA
    - Implement issue 715: Search Editor for saving and executing Find & Replaces searches.
    - Implement issue 588: Clipboard Editor for saving and inserting text.
    - Implement issue 1519: Navigate between links in Code View.
    - Implement issue 167: Index Editor to create a book index.
    - Implement issue 1450: View classes used in HTML files.
    - Implement issue 102: View details of all HTML files
    - Implement issue 839: Word Count (in View HTML details)
    - Implement issue 1392: View details of all images
    - Implement issue 1513: Add progress indicators to various functions.
    - Implement issue 1510: Add Existing Files should only open last file not all files.
    - Implement issue 1428: Find&Replace should allow Ctrl/Shift key modifiers to set what to search.
    - Implement issue 1325: Insert Images support for multiple images, resizing, thumbnails.
    - Implement issue 31: Automatically set "date of modification" on save 
    - Implement issue 1508: Allow export/saving of individual files.
    - Implement issue 1367: Shortcut key to remove code tags from selected text.
    - Implement issue 761: Shortcut key to close last open tag (Code View).
    - Implement issue 1507: Metadata dialogs should allow double click to select.
    - Implement issue 1457: Save should not add heading ids - already done in Generate TOC.
    - Implement issue 1444: Sigil should not include .txt or .html in file associations during install.
    - Implement issue 1443: Find&Replace should save state on restart,
      UI should enable/disable more items based on view
    - Implement issue 1416: Don't add selected text to F&R history and increase selected
      text limit for being auto loaded into F&R.
    - Implement issue 1414: Cover semantic should not be added automatically.
    - Implement issue 1405: Cleared shortcut reset to default after restart.
    - Implement issue 1407: Tidy should allow more fine-grained control.