@@ -1,4 +1,5 @@
 Sigil 0.6.0 TBA
+    - Implement issue 1521: Tab headers should allow right click to close other tabs, toggle view state.
     - Implement issue 715: Search Editor for saving and executing Find & Replaces searches.
     - Implement issue 588: Clipboard Editor for saving and inserting text.
     - Implement issue 1519: Navigate between links in Code View.
